# biothings.api

./: .codacy.yml  .flake8  .gitignore  .pre-commit-config.yaml  .prospector.yml  .readthedocs.yml  .travis.yml  CHANGES.txt  CODE_OF_CONDUCT.md  CODING_STYLE_EXAMPLES.md  CONTRIBUTING.md  Contributors.md  MANIFEST.in  README.md  RELEASE.md  buildspec.yml  config.py.example  pyproject.toml  requirements.txt  requirements_web_es6.txt  requirements_web_es7.txt  setup.cfg  setup.py  start-project.py
.github/workflows/: main.yml  pypi-publish.yml  run-tests.yml  test-build.yml
biothings/: .flake8  .gitignore  __init__.py  __main__.py  _version.py  version.py
biothings/cli/: __init__.py  assistant.py  backend.py  config.py.sample  dataplugin.py  dataplugin_hub.py  exceptions.py  hub.py  log.py  manager.py  manifest.py  operations.py  settings.py  structure.py  utils.py  web_app.py
biothings/databuild/: backend.py  builder.py  differ.py  mapper.py  sync.py  syncer.py
biothings/dataindex/: indexer.py
biothings/dataload/: __init__.py  dispatch.py  dumper.py  start.py  storage.py  uploader.py
biothings/hub/: __init__.py  manager.py  (+2 more)
biothings/tests/biothings_pytest_plugin/: README.md  biothings_pytest_plugin.py  plugin.py  pyproject.toml  setup.py
biothings/tests/biothings_pytest_plugin/biothings_pytest_plugin/: README.md
config/: __init__.py  album.py  local1.py  local2.py  mygene.py
docs/: SPECS.md  auto_rebuild.py  conf.py  index.rst  make.bat  sphinx-requirements.txt
pharmgkb/: README  manifest.yaml  parser.py
tests/: README.md  conftest.py  test_config.py
(+657 files in other folders)
