[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biothings-pytest-plugin"
version = "0.1"
description = "A pytest plugin for biothings"
requires-python = ">=3.8"
license = {text = "Apache Software License (Apache License, Version 2.0)"}
authors = [
    {name = "The BioThings Team", email = "cwu@scripps.edu"}
]

dependencies = [
    "pytest",
    "boto3",
    "requests"
]

[project.entry-points."pytest11"]
"biothings-pytest-plugin" = "biothings_pytest_plugin"
